# curso-rust-4-23-ejercicios

L01_02/tests/: if1.rs  if2.rs  primitive_types1.rs  primitive_types2.rs  primitive_types3.rs  primitive_types5.rs  variables2.rs
L03/tests/: functions1.rs  functions2.rs  functions3.rs  functions4.rs  functions5.rs  lifetimes1.rs  lifetimes2.rs
L04/: Cargo.lock:Zone.Identifier
L04/tests/: enums1.rs  enums2.rs  enums3.rs  structs1.rs  structs2.rs  structs3.rs
L05/tests/: errors1.rs  errors2.rs  errors3.rs  errors4.rs  hashmaps1.rs  hashmaps3.rs  vecs1.rs  vecs2.rs
L06/tests/: modules1.rs  modules2.rs  modules3.rs
L07/genericsimple/src/: main.rs
L07/testassert/: Cargo.toml
database-example/: Cargo.toml
database-example/src/: main.rs
diesel-example/: .env  Cargo.toml  curso.sqlite  diesel.toml  diesel_cli.txt
diesel-example/migrations/2023-03-29-113816_curso-rust/: up.sql
diesel-example/src/: main.rs  models.rs  repository.rs  schema.rs  service.rs
multithread-example/: Cargo.toml
multithread-example/src/: closures_move.rs  closures_types.rs  integrated_crossbeam.rs  main.rs  multithread_arc.rs  multithread_mutex.rs  multithread_rc.rs  multithread_rwlock.rs  multithread_simple.rs  multithread_with_channels.rs  multithread_with_channels_crossbeam.rs  multithread_with_crossbeam.rs  multithread_with_files.rs
multithread-example/src/files/: file1.json  file2.csv
