[package]
name = "multithread-example"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossbeam = "0.8.2"
serde = { version = "1.0.158", features = ["derive"] }
serde_json="1.0.94"
tokio = { version = "1.26.0", features = ["full"] }
